Closes #772: Improve code quality after static analysis
Analysis performed by:
* PMD
* findbugs via Sonar